codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_command_remote.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: popup
---
────────────────────────────────────────────────────────────────────────────────
› /work
────────────────────────────────────────────────────────────────────────────────
  gpt-5.6-sol default · /tmp/project
